Updating notebook for figures

--- a/papers/article_IOP/notebooks/DD-features-dataset-examples.ipynb
+++ b/papers/article_IOP/notebooks/DD-features-dataset-examples.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "handed-humidity",
+   "id": "148fc53c",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "available-negotiation",
+   "id": "4266ce2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "therapeutic-chemical",
+   "id": "421b902d",
    "metadata": {},
    "source": [
     "# Load model"
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ordered-medicine",
+   "id": "59d23823",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "improving-sampling",
+   "id": "daab7255",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "advanced-calcium",
+   "id": "900fae37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fabulous-experience",
+   "id": "2d40f17c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "black-debut",
+   "id": "4d8594d4",
    "metadata": {},
    "source": [
     "# Prepare the Ground Truth (GT) model"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "pretty-moisture",
+   "id": "b480aa17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "planned-fellow",
+   "id": "e745b464",
    "metadata": {},
    "source": [
     "\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "appointed-edward",
+   "id": "05f1d4a1",
    "metadata": {},
    "outputs": [
     {
@@ -381,14 +381,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "three-pearl",
+   "id": "6ef3d348",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "developmental-polymer",
+   "id": "c9a8cb97",
    "metadata": {},
    "source": [
     "# PSF recovery"
@@ -397,14 +397,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "manual-arkansas",
+   "id": "fc7f2c1d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "passing-hearing",
+   "id": "623f6ab4",
    "metadata": {},
    "source": [
     "## Recovery @ Euclid resolution"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "unavailable-aspect",
+   "id": "0f8ac077",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "unlike-harmony",
+   "id": "bb5de19d",
    "metadata": {
     "scrolled": true
    },
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polish-stuart",
+   "id": "81c129e7",
    "metadata": {},
    "source": [
     "## Recovery @ 3x Euclid resolution"
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "mysterious-voltage",
+   "id": "a46a6a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "signal-drink",
+   "id": "c5196270",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "genetic-scoop",
+   "id": "2be97689",
    "metadata": {},
    "source": [
     "## Monochromatic reconstruction @ 750nm , 3x Euclid resolution"
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "driving-judgment",
+   "id": "9d401879",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "palestinian-smooth",
+   "id": "48117497",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-hybrid",
+   "id": "62c0e9c8",
    "metadata": {},
    "source": [
     "## OPD reconstruction"
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "subjective-profession",
+   "id": "2b14cd09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "interstate-absorption",
+   "id": "71ea3d2c",
    "metadata": {},
    "outputs": [
     {
@@ -767,14 +767,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "answering-increase",
+   "id": "21b430e4",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "stopped-packet",
+   "id": "0b0df5e7",
    "metadata": {},
    "source": [
     "# Star reconstruction"
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fundamental-invite",
+   "id": "ebfe2c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "impressive-statement",
+   "id": "303177a5",
    "metadata": {},
    "outputs": [
     {
@@ -1002,14 +1002,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "surrounded-bulletin",
+   "id": "a6722b21",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "criminal-window",
+   "id": "84b5cdb0",
    "metadata": {},
    "source": [
     "# Star observations and wavefront"
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "massive-people",
+   "id": "29ff91ad",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "coordinate-applicant",
+   "id": "2649586d",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "colored-montgomery",
+   "id": "b9359a23",
    "metadata": {},
    "outputs": [
     {
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "challenging-summary",
+   "id": "30578714",
    "metadata": {},
    "source": [
     "# Research statement figure"
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forbidden-clone",
+   "id": "e07aad84",
    "metadata": {},
    "source": [
     "### Chromatic reconstruction"
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "parallel-petite",
+   "id": "cbf04e09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "attended-possession",
+   "id": "69d7fef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "intelligent-economics",
+   "id": "b4d33f0f",
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serial-local",
+   "id": "cc3e0f6e",
    "metadata": {},
    "source": [
     "### Polychromatic obs @ Eculid resolution"
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "vocal-disorder",
+   "id": "851ce1ef",
    "metadata": {
     "scrolled": false
    },
@@ -1351,7 +1351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-methodology",
+   "id": "bf46acf1",
    "metadata": {},
    "source": [
     "### Polychromatic obs @ 3x Eculid resolution"
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "military-brook",
+   "id": "95b04d69",
    "metadata": {},
    "outputs": [
     {
@@ -1430,7 +1430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complex-perth",
+   "id": "ea00665d",
    "metadata": {},
    "source": [
     "### OPD reconstruction\n"
@@ -1439,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "atomic-valuation",
+   "id": "875b4017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1452,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "distant-playback",
+   "id": "96bf75d0",
    "metadata": {
     "scrolled": true
    },
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confused-bermuda",
+   "id": "af1fc9ea",
    "metadata": {},
    "source": [
     "### Noisy observation"
@@ -1489,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "understanding-jefferson",
+   "id": "6baccde7",
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "satisfactory-retirement",
+   "id": "b78ab0d8",
    "metadata": {},
    "source": [
     "### Plot together"
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "capital-heating",
+   "id": "9d0c2631",
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "formal-pipeline",
+   "id": "077ded7f",
    "metadata": {},
    "outputs": [
     {
@@ -1734,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "public-rugby",
+   "id": "2b780761",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1742,7 +1742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "constant-opera",
+   "id": "185130d2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1765,6 +1765,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.12"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
