Updating notebooks with MCCD results for paper

--- a/papers/article_IOP/notebooks/table-pixel-errors-metrics.ipynb
+++ b/papers/article_IOP/notebooks/table-pixel-errors-metrics.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "26f63ec2",
+   "id": "e3504e2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2842e7ea",
+   "id": "ee9826bf",
    "metadata": {},
    "source": [
     "# RCA"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fa75b233",
+   "id": "4b6a0be1",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b489cee",
+   "id": "b8df0ccf",
    "metadata": {},
    "source": [
     "# PSFEx"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "83c85c00",
+   "id": "c9c99880",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,55 @@
   },
   {
    "cell_type": "markdown",
-   "id": "625aef17",
+   "id": "9e034a81",
+   "metadata": {},
+   "source": [
+    "# MCCD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "af326cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observation resolution:\n",
+      "Absolute RMSE x1: 4.353e-04\n",
+      "Relative RMSE x1: 5.95 %\n",
+      "\n",
+      "Super resolution:\n",
+      "Absolute RMSE x3: 9.768e-04\n",
+      "Relative RMSE x3: 63.55 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load metrics\n",
+    "## Observation resolution\n",
+    "mccd_metric_path = './../data/metrics/mccd/mccd_id06_metrics.npy'\n",
+    "mccd_metrics = np.load(mccd_metric_path, allow_pickle=True)[()]\n",
+    "\n",
+    "## Super resolution\n",
+    "mccd_SR_metric_path = './../data/metrics/mccd/mccd_SR_id10_metrics.npy'\n",
+    "mccd_SR_metrics = np.load(mccd_SR_metric_path, allow_pickle=True)[()]\n",
+    "\n",
+    "print('Observation resolution:')\n",
+    "print('Absolute RMSE x1: %.3e'% mccd_metrics['rmse'][3])\n",
+    "print('Relative RMSE x1: %.2f %%'% mccd_metrics['rel_rmse'][3])\n",
+    "print('')\n",
+    "print('Super resolution:')\n",
+    "print('Absolute RMSE x3: %.3e'% mccd_SR_metrics['metrics_dics'][3]['pix_rmse'])\n",
+    "print('Relative RMSE x3: %.2f %%'% mccd_SR_metrics['metrics_dics'][3]['pix_rel_rmse'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c287995",
    "metadata": {},
    "source": [
     "# Zernike 15"
@@ -115,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5ab5f0df",
+   "id": "f075c882",
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "408fd0ee",
+   "id": "2010e0a6",
    "metadata": {},
    "source": [
     "# Zernike 40"
@@ -159,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "460a065c",
+   "id": "478ceb4d",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "096b6c24",
+   "id": "ba2a0d75",
    "metadata": {},
    "source": [
     "# WaveDiff-original"
@@ -203,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e0bab39a",
+   "id": "44aed0fb",
    "metadata": {},
    "outputs": [
     {
@@ -239,14 +287,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db65a006",
+   "id": "5d7ec004",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "68229cbd",
+   "id": "df7cfe10",
    "metadata": {},
    "source": [
     "# WaveDiff-graph\n"
@@ -254,8 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "dab3120a",
+   "execution_count": 7,
+   "id": "727627b5",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52c511a2",
+   "id": "392ee0d8",
    "metadata": {},
    "source": [
     "# WaveDiff-polygraph"
@@ -298,8 +346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "06d32dcf",
+   "execution_count": 8,
+   "id": "8e166824",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd17d7b4",
+   "id": "98e34c4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +391,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcb564f0",
+   "id": "49ea9786",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06dc9669",
    "metadata": {},
    "outputs": [],
    "source": []
