--- a/papers/article_IOP/notebooks/table-shape-size-error-metrics.ipynb
+++ b/papers/article_IOP/notebooks/table-shape-size-error-metrics.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2c3e1aad",
+   "id": "b3715161",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b2bd214",
+   "id": "dbc5c9b7",
    "metadata": {},
    "source": [
     "# RCA"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "613e8f84",
+   "id": "aba6154b",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2b006ee",
+   "id": "ff1b3486",
    "metadata": {},
    "source": [
     "# PSFEx"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7d7da3bc",
+   "id": "173d8220",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3bb14ab",
+   "id": "9b3b45a0",
+   "metadata": {},
+   "source": [
+    "# MCCD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "137ab513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "e1 RMSE: \t 9.787e-02\n",
+      "e1 std:  \t 9.757e-02\n",
+      "\n",
+      "e2 RMSE: \t 7.322e-02\n",
+      "e2 std:  \t 7.228e-02\n",
+      "\n",
+      "R2/<R2> RMSE: \t 4.744e+00\n",
+      "R2/<R2> std:  \t 4.168e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Load metrics\n",
+    "## Super resolution\n",
+    "mccd_SR_metric_path = './../data/metrics/mccd/mccd_SR_id10_metrics.npy'\n",
+    "mccd_SR_metrics = np.load(mccd_SR_metric_path, allow_pickle=True)[()]\n",
+    "\n",
+    "print('')\n",
+    "print('e1 RMSE: \\t %.3e'% mccd_SR_metrics['metrics_dics'][3]['rmse_e1'])\n",
+    "print('e1 std:  \\t %.3e'% mccd_SR_metrics['metrics_dics'][3]['std_rmse_e1'])\n",
+    "\n",
+    "print('')\n",
+    "print('e2 RMSE: \\t %.3e'% mccd_SR_metrics['metrics_dics'][3]['rmse_e2'])\n",
+    "print('e2 std:  \\t %.3e'% mccd_SR_metrics['metrics_dics'][3]['std_rmse_e2'])\n",
+    "\n",
+    "print('')\n",
+    "print('R2/<R2> RMSE: \\t %.3e'% mccd_SR_metrics['metrics_dics'][3]['rmse_R2_meanR2'])\n",
+    "print('R2/<R2> std:  \\t %.3e'% mccd_SR_metrics['metrics_dics'][3]['std_rmse_R2_meanR2'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c095871",
    "metadata": {},
    "source": [
     "# Zernike 15"
@@ -122,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "471cf3a8",
+   "id": "02747189",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4439ebbc",
+   "id": "5c4f65b6",
    "metadata": {},
    "source": [
     "# Zernike 40"
@@ -171,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b546384a",
+   "id": "11254ecb",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "532e45f9",
+   "id": "c965e678",
    "metadata": {},
    "source": [
     "# WaveDiff-original"
@@ -221,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "affff313",
+   "id": "0ccaf6fe",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35df8782",
+   "id": "731b979c",
    "metadata": {},
    "source": [
     "# WaveDiff-graph"
@@ -271,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a9e51cf6",
+   "id": "3dbea8ce",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "933def3e",
+   "id": "a4fb350f",
    "metadata": {},
    "source": [
     "# WaveDiff-polygraph"
@@ -321,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1c7356d5",
+   "id": "31f5ac5d",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +413,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3117fe6",
+   "id": "f87c4f65",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a3dae28",
    "metadata": {},
    "outputs": [],
    "source": []
