--- a/WaveDiffRunExercise.ipynb
+++ b/WaveDiffRunExercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpDRivHREbVDw1AoHjda/R",
+      "authorship_tag": "ABX9TyNF8vYYhwY2GIHKD/iivWS6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/CosmoStat/wf-psf/blob/Refactor-psf-models/WaveDiffRunExercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/CosmoStat/wf-psf/blob/dummy_main/WaveDiffRunExercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,17 +64,6 @@
     {
       "cell_type": "code",
       "source": [
-        "!cd .. && ls"
-      ],
-      "metadata": {
-        "id": "5_nQ-f1wgQV2"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!git pull origin"
       ],
       "metadata": {
@@ -86,7 +75,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git checkout Refactor-psf-models"
+        "!git checkout refactor_metrics"
       ],
       "metadata": {
         "id": "F4sZQS-kae8t"
