Added missing zernike code ref

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -1,3 +1,18 @@
+@article{Antonello:15,
+author = {Jacopo Antonello and Michel Verhaegen},
+journal = {J. Opt. Soc. Am. A},
+keywords = {Wave-front sensing; Phase retrieval; Aberration compensation; Active or adaptive optics; Adaptive optics; Deformable mirrors; Fourier transforms; Optical components; Optical systems; Phase retrieval},
+number = {6},
+pages = {1160--1170},
+publisher = {Optica Publishing Group},
+title = {Modal-based phase retrieval for adaptive optics},
+volume = {32},
+month = {Jun},
+year = {2015},
+url = {https://opg.optica.org/josaa/abstract.cfm?URI=josaa-32-6-1160},
+doi = {10.1364/JOSAA.32.001160},
+}
+
 @article{astropy:13,
 Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
@@ -271,3 +286,4 @@ author={
     title = {seaborn: statistical data visualization},
     journal = {Journal of Open Source Software}
  }
+
