Added new references

--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -126,6 +126,14 @@ title = {Rethinking data-driven point spread function modeling with a differenti
 journal = {Inverse Problems},
 }
 
+@online{chollet:2015keras, 
+  title={Keras}, 
+  author={Chollet, Francois and others}, 
+  year={2015}, 
+  publisher={GitHub}, 
+  url={https://github.com/fchollet/keras}, 
+}
+
 @misc{clark:15, 
   title={Pillow (PIL Fork) Documentation}, 
   author={Clark, Alex}, 
@@ -194,6 +202,16 @@ journal = {Inverse Problems},
   pages   = {261--272},
   adsurl  = {https://rdcu.be/b08Wh},
   doi     = {10.1038/s41592-019-0686-2},
+}
+
+@inproceedings{mckinney:2010pandas, 
+  title={Data structures for statistical computing in python}, 
+  author={McKinney, Wes and others}, 
+  booktitle={Proceedings of the 9th Python in Science Conference}, 
+  volume={445}, 
+  pages={51--56}, 
+  year={2010}, 
+  organization={Austin, TX} 
 }
 
 @article{opencv_library:08, 
