--- a/papers/article_IOP/notebooks/generate-coherent-dataset-scrip.ipynb
+++ b/papers/article_IOP/notebooks/generate-coherent-dataset-scrip.ipynb
@@ -80,7 +80,7 @@
     "zernikes = wf_psf.utils.zernike_generator(n_zernikes=max_order, wfe_dim=pupil_diameter)\n",
     "\n",
     "# Initialize PSF simulator\n",
-    "sim_PSF_toolkit = wf_psf.SimPSFToolkit(\n",
+    "sim_PSF_toolkit = wf_psf.PSFSimulator(\n",
     "    zernikes, max_order=max_order, max_wfe_rms=max_wfe_rms, oversampling_rate=oversampling_rate,\n",
     "    output_Q=output_Q, output_dim=output_dim, pupil_diameter=pupil_diameter, euclid_obsc=euclid_obsc,\n",
     "    LP_filter_length=LP_filter_length)\n",
