--- a/papers/article_IOP/notebooks/DD-features-dataset-examples.ipynb
+++ b/papers/article_IOP/notebooks/DD-features-dataset-examples.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "import wf_psf as wf\n",
     "\n",
-    "import wf_psf.SimPSFToolkit as SimPSFToolkit\n",
+    "import wf_psf.PSFSimulator as PSFSimulator\n",
     "import wf_psf.utils as wf_utils\n",
     "import wf_psf.tf_psf_field as tf_psf_field\n",
     "\n",
@@ -176,7 +176,7 @@
     "tf_zernike_cube = tf.convert_to_tensor(np_zernike_cube, dtype=tf.float32)\n",
     "\n",
     "# Prepare np input\n",
-    "simPSF_np = SimPSFToolkit(\n",
+    "simPSF_np = PSFSimulator(\n",
     "    zernikes,\n",
     "    max_order=args['n_zernikes'],\n",
     "    pupil_diameter=args['pupil_diameter'],\n",
