corrected module imports, class imports, and docstrings

--- a/papers/Neurips2021_ML4Physics_workshop/notebooks/Neurips2021-ML4Physics_Reconstructions-chromatic-NASA.ipynb
+++ b/papers/Neurips2021_ML4Physics_workshop/notebooks/Neurips2021-ML4Physics_Reconstructions-chromatic-NASA.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "import wf_psf as wf\n",
     "\n",
-    "import wf_psf.PSFSimulator as PSFSimulator\n",
+    "import wf_psf.psf_simulator as psf_simulator\n",
     "import wf_psf.utils as wf_utils\n",
     "import wf_psf.tf_psf_field as tf_psf_field\n",
     "\n",
