--- a/papers/article_IOP/notebooks/DD-features-dataset-examples.ipynb
+++ b/papers/article_IOP/notebooks/DD-features-dataset-examples.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "import wf_psf as wf\n",
     "\n",
-    "import wf_psf.PSFSimulator as PSFSimulator\n",
+    "import wf_psf.psf_simulator as psf_simulator\n",
     "import wf_psf.utils as wf_utils\n",
     "import wf_psf.tf_psf_field as tf_psf_field\n",
     "\n",
