Adjust filename for train masks dataset for consistency

--- a/data/masked_dataset/gen_masked_dataset.ipynb
+++ b/data/masked_dataset/gen_masked_dataset.ipynb
@@ -198,10 +198,10 @@
    "outputs": [],
    "source": [
     "dataset_train_2000['masks'] = 1-masks[:2000]\n",
-    "np.save('../masked_dataset/train_Euclid_res_2000_TrainStars_she_mask_id_001.npyy', dataset_train_2000, allow_pickle=True )\n",
+    "np.save('../masked_dataset/train_Euclid_res_2000_TrainStars_she_masked_id_001.npyy', dataset_train_2000, allow_pickle=True )\n",
     "\n",
     "dataset_train_200['masks'] = 1-masks[:200]\n",
-    "np.save('../masked_dataset/train_Euclid_res_200_TrainStars_she_mask_id_001.npy', dataset_train_200, allow_pickle=True)"
+    "np.save('../masked_dataset/train_Euclid_res_200_TrainStars_she_masked_id_001.npy', dataset_train_200, allow_pickle=True)"
    ]
   },
   {
@@ -256,22 +256,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sample Weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from wf_psf.training.train_utils import calculate_sample_weights"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -298,8 +282,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sample Weights"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from wf_psf.training.train_utils import calculate_sample_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -384,16 +384,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load SHE data\n",
     "she_data = np.load('/sps/euclid/OU-SHE/ObsID_2378/train_dataset_nstars_2090_obs_id_2378.npy', allow_pickle=True)[()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
