Reformat with black

--- a/src/wf_psf/tests/data/validation/masked_loss/results/plot_results.ipynb
+++ b/src/wf_psf/tests/data/validation/masked_loss/results/plot_results.ipynb
@@ -17,19 +17,19 @@
    "outputs": [],
    "source": [
     "# Trained on masked data, tested on masked data\n",
-    "metrics_path_mm = '../runs/masked_train_masked_test/wf-outputs/wf-outputs-202503131718/metrics/metrics-polymask_train_mask_test.npy'\n",
+    "metrics_path_mm = \"../runs/masked_train_masked_test/wf-outputs/wf-outputs-202503131718/metrics/metrics-polymask_train_mask_test.npy\"\n",
     "mask_train_mask_test = np.load(metrics_path_mm, allow_pickle=True)[()]\n",
     "\n",
     "# Trained on masked data, tested on unmasked data\n",
-    "metrics_path_mu = '../runs/masked_train_unit_mask_test/wf-outputs/wf-outputs-202503131720/metrics/metrics-polymasked_train_unit_mask_test.npy'\n",
+    "metrics_path_mu = \"../runs/masked_train_unit_mask_test/wf-outputs/wf-outputs-202503131720/metrics/metrics-polymasked_train_unit_mask_test.npy\"\n",
     "mask_train_nomask_test = np.load(metrics_path_mu, allow_pickle=True)[()]\n",
     "\n",
     "# Trained on unmasked data, tested on unmasked data\n",
-    "metrics_path_c = '../runs/control_train/wf-outputs/wf-outputs-202503131716/metrics/metrics-polycontrol_train.npy'\n",
+    "metrics_path_c = \"../runs/control_train/wf-outputs/wf-outputs-202503131716/metrics/metrics-polycontrol_train.npy\"\n",
     "control_train = np.load(metrics_path_c, allow_pickle=True)[()]\n",
     "\n",
     "# Trained and tested with unitary masks\n",
-    "metrics_path_u = '../runs/unit_masked_train/wf-outputs/wf-outputs-202503131721/metrics/metrics-polyunit_masked_train.npy'\n",
+    "metrics_path_u = \"../runs/unit_masked_train/wf-outputs/wf-outputs-202503131721/metrics/metrics-polyunit_masked_train.npy\"\n",
     "unitary = np.load(metrics_path_u, allow_pickle=True)[()]"
    ]
   },
@@ -50,8 +50,8 @@
    ],
    "source": [
     "print(mask_train_mask_test.keys())\n",
-    "print(mask_train_mask_test['test_metrics'].keys())\n",
-    "print(mask_train_mask_test['test_metrics']['poly_metric'].keys())"
+    "print(mask_train_mask_test[\"test_metrics\"].keys())\n",
+    "print(mask_train_mask_test[\"test_metrics\"][\"poly_metric\"].keys())"
    ]
   },
   {
@@ -60,17 +60,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_test_mask_test_rel_rmse = mask_train_mask_test['test_metrics']['poly_metric']['rel_rmse']\n",
-    "mask_test_mask_test_std_rel_rmse = mask_train_mask_test['test_metrics']['poly_metric']['std_rel_rmse']\n",
+    "mask_test_mask_test_rel_rmse = mask_train_mask_test[\"test_metrics\"][\"poly_metric\"][\n",
+    "    \"rel_rmse\"\n",
+    "]\n",
+    "mask_test_mask_test_std_rel_rmse = mask_train_mask_test[\"test_metrics\"][\"poly_metric\"][\n",
+    "    \"std_rel_rmse\"\n",
+    "]\n",
     "\n",
-    "mask_test_nomask_test_rel_rmse = mask_train_nomask_test['test_metrics']['poly_metric']['rel_rmse']\n",
-    "mask_test_nomask_test_std_rel_rmse = mask_train_nomask_test['test_metrics']['poly_metric']['std_rel_rmse']\n",
+    "mask_test_nomask_test_rel_rmse = mask_train_nomask_test[\"test_metrics\"][\"poly_metric\"][\n",
+    "    \"rel_rmse\"\n",
+    "]\n",
+    "mask_test_nomask_test_std_rel_rmse = mask_train_nomask_test[\"test_metrics\"][\n",
+    "    \"poly_metric\"\n",
+    "][\"std_rel_rmse\"]\n",
     "\n",
-    "control_test_rel_rmse = control_train['test_metrics']['poly_metric']['rel_rmse']\n",
-    "control_test_std_rel_rmse = control_train['test_metrics']['poly_metric']['std_rel_rmse']\n",
+    "control_test_rel_rmse = control_train[\"test_metrics\"][\"poly_metric\"][\"rel_rmse\"]\n",
+    "control_test_std_rel_rmse = control_train[\"test_metrics\"][\"poly_metric\"][\"std_rel_rmse\"]\n",
     "\n",
-    "unitary_test_rel_rmse = unitary['test_metrics']['poly_metric']['rel_rmse']\n",
-    "unitary_test_std_rel_rmse = unitary['test_metrics']['poly_metric']['std_rel_rmse']"
+    "unitary_test_rel_rmse = unitary[\"test_metrics\"][\"poly_metric\"][\"rel_rmse\"]\n",
+    "unitary_test_std_rel_rmse = unitary[\"test_metrics\"][\"poly_metric\"][\"std_rel_rmse\"]"
    ]
   },
   {
@@ -92,12 +100,29 @@
    "source": [
     "# Plot the results\n",
     "fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "plt.title('Relative RMSE 1x - Test dataset')\n",
-    "ax.errorbar([0, 1, 2, 3], [control_test_rel_rmse, mask_test_mask_test_rel_rmse, mask_test_nomask_test_rel_rmse, unitary_test_rel_rmse], yerr=[control_test_std_rel_rmse, mask_test_mask_test_std_rel_rmse, mask_test_nomask_test_std_rel_rmse, unitary_test_std_rel_rmse], fmt='o')\n",
+    "plt.title(\"Relative RMSE 1x - Test dataset\")\n",
+    "ax.errorbar(\n",
+    "    [0, 1, 2, 3],\n",
+    "    [\n",
+    "        control_test_rel_rmse,\n",
+    "        mask_test_mask_test_rel_rmse,\n",
+    "        mask_test_nomask_test_rel_rmse,\n",
+    "        unitary_test_rel_rmse,\n",
+    "    ],\n",
+    "    yerr=[\n",
+    "        control_test_std_rel_rmse,\n",
+    "        mask_test_mask_test_std_rel_rmse,\n",
+    "        mask_test_nomask_test_std_rel_rmse,\n",
+    "        unitary_test_std_rel_rmse,\n",
+    "    ],\n",
+    "    fmt=\"o\",\n",
+    ")\n",
     "ax.set_xticks([0, 1, 2, 3])\n",
-    "ax.set_xticklabels(['Control Train', 'Mask Train Mask Test', 'Mask Train Unit Mask Test', 'Unitary'])\n",
-    "ax.grid('minor')\n",
-    "ax.set_ylabel('Relative RMSE')\n",
+    "ax.set_xticklabels(\n",
+    "    [\"Control Train\", \"Mask Train Mask Test\", \"Mask Train Unit Mask Test\", \"Unitary\"]\n",
+    ")\n",
+    "ax.grid(\"minor\")\n",
+    "ax.set_ylabel(\"Relative RMSE\")\n",
     "plt.show()"
    ]
   },
@@ -107,17 +132,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask_train_mask_test_rel_rmse = mask_train_mask_test['train_metrics']['poly_metric']['rel_rmse']\n",
-    "mask_train_mask_test_std_rel_rmse = mask_train_mask_test['train_metrics']['poly_metric']['std_rel_rmse']\n",
+    "mask_train_mask_test_rel_rmse = mask_train_mask_test[\"train_metrics\"][\"poly_metric\"][\n",
+    "    \"rel_rmse\"\n",
+    "]\n",
+    "mask_train_mask_test_std_rel_rmse = mask_train_mask_test[\"train_metrics\"][\n",
+    "    \"poly_metric\"\n",
+    "][\"std_rel_rmse\"]\n",
     "\n",
-    "mask_train_nomask_test_rel_rmse = mask_train_nomask_test['train_metrics']['poly_metric']['rel_rmse']\n",
-    "mask_train_nomask_test_std_rel_rmse = mask_train_nomask_test['train_metrics']['poly_metric']['std_rel_rmse']\n",
+    "mask_train_nomask_test_rel_rmse = mask_train_nomask_test[\"train_metrics\"][\n",
+    "    \"poly_metric\"\n",
+    "][\"rel_rmse\"]\n",
+    "mask_train_nomask_test_std_rel_rmse = mask_train_nomask_test[\"train_metrics\"][\n",
+    "    \"poly_metric\"\n",
+    "][\"std_rel_rmse\"]\n",
     "\n",
-    "control_train_rel_rmse = control_train['train_metrics']['poly_metric']['rel_rmse']\n",
-    "control_train_std_rel_rmse = control_train['train_metrics']['poly_metric']['std_rel_rmse']\n",
+    "control_train_rel_rmse = control_train[\"train_metrics\"][\"poly_metric\"][\"rel_rmse\"]\n",
+    "control_train_std_rel_rmse = control_train[\"train_metrics\"][\"poly_metric\"][\n",
+    "    \"std_rel_rmse\"\n",
+    "]\n",
     "\n",
-    "unitary_rel_rmse = unitary['train_metrics']['poly_metric']['rel_rmse']\n",
-    "unitary_std_rel_rmse = unitary['train_metrics']['poly_metric']['std_rel_rmse']"
+    "unitary_rel_rmse = unitary[\"train_metrics\"][\"poly_metric\"][\"rel_rmse\"]\n",
+    "unitary_std_rel_rmse = unitary[\"train_metrics\"][\"poly_metric\"][\"std_rel_rmse\"]"
    ]
   },
   {
@@ -139,12 +174,29 @@
    "source": [
     "# Plot the results\n",
     "fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "plt.title('Relative RMSE 1x - Train dataset')\n",
-    "ax.errorbar([0, 1, 2, 3], [control_train_rel_rmse, mask_train_mask_test_rel_rmse, mask_train_nomask_test_rel_rmse, unitary_rel_rmse], yerr=[control_train_std_rel_rmse, mask_train_mask_test_std_rel_rmse, mask_train_nomask_test_std_rel_rmse, unitary_std_rel_rmse], fmt='o')\n",
+    "plt.title(\"Relative RMSE 1x - Train dataset\")\n",
+    "ax.errorbar(\n",
+    "    [0, 1, 2, 3],\n",
+    "    [\n",
+    "        control_train_rel_rmse,\n",
+    "        mask_train_mask_test_rel_rmse,\n",
+    "        mask_train_nomask_test_rel_rmse,\n",
+    "        unitary_rel_rmse,\n",
+    "    ],\n",
+    "    yerr=[\n",
+    "        control_train_std_rel_rmse,\n",
+    "        mask_train_mask_test_std_rel_rmse,\n",
+    "        mask_train_nomask_test_std_rel_rmse,\n",
+    "        unitary_std_rel_rmse,\n",
+    "    ],\n",
+    "    fmt=\"o\",\n",
+    ")\n",
     "ax.set_xticks([0, 1, 2, 3])\n",
-    "ax.set_xticklabels(['Control Train', 'Mask Train Mask Test', 'Mask Train Unit Mask Test', 'Unitary'])\n",
-    "ax.set_ylabel('Relative RMSE')\n",
-    "ax.grid('minor')\n",
+    "ax.set_xticklabels(\n",
+    "    [\"Control Train\", \"Mask Train Mask Test\", \"Mask Train Unit Mask Test\", \"Unitary\"]\n",
+    ")\n",
+    "ax.set_ylabel(\"Relative RMSE\")\n",
+    "ax.grid(\"minor\")\n",
     "plt.show()"
    ]
   },
@@ -167,16 +219,50 @@
    "source": [
     "# Plot test and train relative RMSE in the same plot\n",
     "fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "plt.title('Relative RMSE 1x - Train and Test dataset')\n",
-    "ax.errorbar([0, 1, 2, 3], [control_train_rel_rmse, mask_train_mask_test_rel_rmse, mask_train_nomask_test_rel_rmse, unitary_rel_rmse], yerr=[control_train_std_rel_rmse, mask_train_mask_test_std_rel_rmse, mask_train_nomask_test_std_rel_rmse, unitary_std_rel_rmse], fmt='o', label='Train')\n",
-    "ax.errorbar([0.02, 1.02, 2.02, 3.02], [control_test_rel_rmse, mask_test_mask_test_rel_rmse, mask_test_nomask_test_rel_rmse, unitary_test_rel_rmse], yerr=[control_test_std_rel_rmse, mask_test_mask_test_std_rel_rmse, mask_test_nomask_test_std_rel_rmse, unitary_test_std_rel_rmse], fmt='o', label='Test')\n",
+    "plt.title(\"Relative RMSE 1x - Train and Test dataset\")\n",
+    "ax.errorbar(\n",
+    "    [0, 1, 2, 3],\n",
+    "    [\n",
+    "        control_train_rel_rmse,\n",
+    "        mask_train_mask_test_rel_rmse,\n",
+    "        mask_train_nomask_test_rel_rmse,\n",
+    "        unitary_rel_rmse,\n",
+    "    ],\n",
+    "    yerr=[\n",
+    "        control_train_std_rel_rmse,\n",
+    "        mask_train_mask_test_std_rel_rmse,\n",
+    "        mask_train_nomask_test_std_rel_rmse,\n",
+    "        unitary_std_rel_rmse,\n",
+    "    ],\n",
+    "    fmt=\"o\",\n",
+    "    label=\"Train\",\n",
+    ")\n",
+    "ax.errorbar(\n",
+    "    [0.02, 1.02, 2.02, 3.02],\n",
+    "    [\n",
+    "        control_test_rel_rmse,\n",
+    "        mask_test_mask_test_rel_rmse,\n",
+    "        mask_test_nomask_test_rel_rmse,\n",
+    "        unitary_test_rel_rmse,\n",
+    "    ],\n",
+    "    yerr=[\n",
+    "        control_test_std_rel_rmse,\n",
+    "        mask_test_mask_test_std_rel_rmse,\n",
+    "        mask_test_nomask_test_std_rel_rmse,\n",
+    "        unitary_test_std_rel_rmse,\n",
+    "    ],\n",
+    "    fmt=\"o\",\n",
+    "    label=\"Test\",\n",
+    ")\n",
     "ax.set_xticks([0, 1, 2, 3])\n",
-    "ax.set_xticklabels(['Control Train', 'Mask Train Mask Test', 'Mask Train Unit Mask Test', 'Unitary'])\n",
-    "ax.set_ylabel('Relative RMSE')\n",
-    "ax.grid('minor')\n",
+    "ax.set_xticklabels(\n",
+    "    [\"Control Train\", \"Mask Train Mask Test\", \"Mask Train Unit Mask Test\", \"Unitary\"]\n",
+    ")\n",
+    "ax.set_ylabel(\"Relative RMSE\")\n",
+    "ax.grid(\"minor\")\n",
     "plt.legend()\n",
     "# plt.show()\n",
-    "plt.savefig('masked_loss_validation.pdf')\n"
+    "plt.savefig(\"masked_loss_validation.pdf\")"
    ]
   },
   {
